fixed section containers to all align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,9 +64,9 @@ section {
     flex-direction: column;
     flex-wrap: wrap;
     padding: 20px;
-    margin: 10px;;
+    margin: 10px;
 }
-.about-me-detail {
+.section-detail {
     margin: 20px auto;
     padding-bottom: 50px;
     width: 100%;
@@ -80,19 +80,10 @@ section {
     color: var(--primary-color);
     text-align: right;
     padding: 30px;
-    width:25%;
-    display:flex;
+    flex-basis: 25%;
 }
 .primary-border {
     border-color: var(--primary-color);
-}
-.work-items {
-    flex: 4;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 20px;
-    align-items: stretch;
 }
 .work-container {
     display: flex;
@@ -119,12 +110,6 @@ img {
     font-size: 12px;
     color: #ffffff;
     background-color: var(--tertiary-color);
-}
-.contact-detail {
-    margin: 20px auto;
-    padding-bottom: 50px;
-    width: 100%;
-    display: flex;
 }
 @media screen and (max-width: 980px) {
     header {
